@@ -1,5 +1,3 @@
-// AbstractAudioFrame.java
-
 package jmri.jmrit.audio.swing;
 
 import java.awt.FlowLayout;
@@ -16,7 +14,6 @@ import javax.swing.JTextField;
 import javax.swing.ScrollPaneConstants;
 import javax.swing.SpinnerNumberModel;
 import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
 import javax.vecmath.Vector3f;
 import jmri.Audio;
 import jmri.implementation.AbstractAudio;
@@ -29,47 +26,43 @@ import jmri.util.JmriJFrame;
  * <hr>
  * This file is part of JMRI.
  * <P>
- * JMRI is free software; you can redistribute it and/or modify it under
- * the terms of version 2 of the GNU General Public License as published
- * by the Free Software Foundation. See the "COPYING" file for a copy
- * of this license.
+ * JMRI is free software; you can redistribute it and/or modify it under the
+ * terms of version 2 of the GNU General Public License as published by the Free
+ * Software Foundation. See the "COPYING" file for a copy of this license.
  * <P>
- * JMRI is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- * for more details.
+ * JMRI is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  * <P>
  *
- * @author Matthew Harris  copyright (c) 2009
- * @version $Revision$
+ * @author Matthew Harris copyright (c) 2009
  */
 abstract public class AbstractAudioFrame extends JmriJFrame {
 
-    static final ResourceBundle rb = ResourceBundle.getBundle("jmri.jmrit.beantable.BeanTableBundle");
-    static final ResourceBundle rba = ResourceBundle.getBundle("jmri.jmrit.audio.swing.AudioTableBundle");
+    // static final ResourceBundle rb = ResourceBundle.getBundle("jmri.jmrit.beantable.BeanTableBundle"); // changed to Bundle method
 
     AbstractAudioFrame frame = this;
 
     JPanel main = new JPanel();
-    JScrollPane scroll =
-            new JScrollPane(main,
-                ScrollPaneConstants.VERTICAL_SCROLLBAR_ALWAYS,
-                ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
+    JScrollPane scroll
+            = new JScrollPane(main,
+                    ScrollPaneConstants.VERTICAL_SCROLLBAR_ALWAYS,
+                    ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
 
     AudioTableDataModel model;
 
     static final int INT_PRECISION = (int) Math.pow(10, Audio.DECIMAL_PLACES);
-    static final float FLT_PRECISION = 1/(float)INT_PRECISION;
+    static final float FLT_PRECISION = 1 / (float) INT_PRECISION;
 
     // Common UI components for Add/Edit Audio
-    JLabel sysNameLabel = new JLabel(rb.getString("LabelSystemName"));
+    JLabel sysNameLabel = new JLabel(Bundle.getMessage("LabelSystemName"));
     JTextField sysName = new JTextField(5);
-    JLabel userNameLabel = new JLabel(rb.getString("LabelUserName"));
+    JLabel userNameLabel = new JLabel(Bundle.getMessage("LabelUserName"));
     JTextField userName = new JTextField(15);
 
     /**
      * Standard constructor
-     * 
+     *
      * @param title Title of this AudioFrame
      * @param model AudioTableDataModel holding Audio data
      */
@@ -89,15 +82,17 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
         frame.addHelpMenu("package.jmri.jmrit.beantable.AudioAddEdit", true);
         frame.getContentPane().setLayout(new BoxLayout(frame.getContentPane(), BoxLayout.Y_AXIS));
         main.setLayout(new BoxLayout(main, BoxLayout.Y_AXIS));
-        
+
         JPanel p;
 
-        p = new JPanel(); p.setLayout(new FlowLayout());
+        p = new JPanel();
+        p.setLayout(new FlowLayout());
         p.add(sysNameLabel);
         p.add(sysName);
         frame.getContentPane().add(p);
 
-        p = new JPanel(); p.setLayout(new FlowLayout());
+        p = new JPanel();
+        p.setLayout(new FlowLayout());
         p.add(userNameLabel);
         p.add(userName);
         frame.getContentPane().add(p);
@@ -113,6 +108,7 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
 
     /**
      * Method to populate the Audio frame with current values
+     * @param a Audio object to use
      */
     public void populateFrame(Audio a) {
         sysName.setText(a.getSystemName());
@@ -120,18 +116,17 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
     }
 
     //private static final Logger log = LoggerFactory.getLogger(AbstractAudioFrame.class.getName());
-
     /**
-     * A convenience class to create a JPanel to edit a Vector3f object using
-     * 3 seperate JSpinner Swing objects
+     * A convenience class to create a JPanel to edit a Vector3f object using 3
+     * separate JSpinner Swing objects
      */
     protected static class JPanelVector3f extends JPanel {
 
-        JLabel xLabel = new JLabel(rba.getString("LabelX"));
+        JLabel xLabel = new JLabel(Bundle.getMessage("LabelX"));
         JSpinner xValue = new JSpinner();
-        JLabel yLabel = new JLabel(rba.getString("LabelY"));
+        JLabel yLabel = new JLabel(Bundle.getMessage("LabelY"));
         JSpinner yValue = new JSpinner();
-        JLabel zLabel = new JLabel(rba.getString("LabelZ"));
+        JLabel zLabel = new JLabel(Bundle.getMessage("LabelZ"));
         JSpinner zValue = new JSpinner();
         JLabel unitsLabel = new JLabel();
 
@@ -144,41 +139,42 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
             super();
             layoutPanel(title, "");
         }
-        
+
         JPanelVector3f(String title, String units) {
             super();
             layoutPanel(title, units);
         }
-        
+
+        @SuppressWarnings("UnnecessaryBoxing")
         private void layoutPanel(String title, String units) {
             this.setLayout(new FlowLayout());
-            if (title.length()!=0) {
+            if (title.length() != 0) {
                 this.setBorder(BorderFactory.createCompoundBorder(
-                                BorderFactory.createTitledBorder(title),
-                                BorderFactory.createEmptyBorder(5, 5, 5, 5)));
+                        BorderFactory.createTitledBorder(title),
+                        BorderFactory.createEmptyBorder(5, 5, 5, 5)));
             }
             this.add(xLabel);
             xValue.setPreferredSize(new JTextField(8).getPreferredSize());
             xValue.setModel(
-                    new SpinnerNumberModel(new Float(0f), new Float(-Audio.MAX_DISTANCE), new Float(Audio.MAX_DISTANCE), new Float(FLT_PRECISION)));
+                    new SpinnerNumberModel(Float.valueOf(0f), Float.valueOf(-Audio.MAX_DISTANCE), Float.valueOf(Audio.MAX_DISTANCE), Float.valueOf(FLT_PRECISION)));
             xValue.setEditor(new JSpinner.NumberEditor(xValue, "0.00"));
             this.add(xValue);
 
             this.add(yLabel);
             yValue.setPreferredSize(new JTextField(8).getPreferredSize());
             yValue.setModel(
-                    new SpinnerNumberModel(new Float(0f), new Float(-Audio.MAX_DISTANCE), new Float(Audio.MAX_DISTANCE), new Float(FLT_PRECISION)));
+                    new SpinnerNumberModel(Float.valueOf(0f), Float.valueOf(-Audio.MAX_DISTANCE), Float.valueOf(Audio.MAX_DISTANCE), Float.valueOf(FLT_PRECISION)));
             yValue.setEditor(new JSpinner.NumberEditor(yValue, "0.00"));
             this.add(yValue);
 
             this.add(zLabel);
             zValue.setPreferredSize(new JTextField(8).getPreferredSize());
             zValue.setModel(
-                    new SpinnerNumberModel(new Float(0f), new Float(-Audio.MAX_DISTANCE), new Float(Audio.MAX_DISTANCE), new Float(FLT_PRECISION)));
+                    new SpinnerNumberModel(Float.valueOf(0f), Float.valueOf(-Audio.MAX_DISTANCE), Float.valueOf(Audio.MAX_DISTANCE), Float.valueOf(FLT_PRECISION)));
             zValue.setEditor(new JSpinner.NumberEditor(zValue, "0.00"));
             this.add(zValue);
 
-            if (units.length()!=0) {
+            if (units.length() != 0) {
                 unitsLabel.setText(units);
                 this.add(unitsLabel);
             }
@@ -187,6 +183,7 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
 
         /**
          * Set the value of this object
+         *
          * @param value value to set
          */
         public void setValue(Vector3f value) {
@@ -197,6 +194,7 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
 
         /**
          * Retrieve the current value of this object
+         *
          * @return current value
          */
         public Vector3f getValue() {
@@ -208,8 +206,8 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
     }
 
     /**
-     * A convenience class to create a JPanel for editing a float value
-     * using combined JSlider and JSPinner Swing objects
+     * A convenience class to create a JPanel for editing a float value using
+     * combined JSlider and JSPinner Swing objects
      */
     protected static class JPanelSliderf extends JPanel {
 
@@ -217,49 +215,44 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
 
         JSpinner spinner = new JSpinner();
 
+        @SuppressWarnings({"UnnecessaryBoxing", "OverridableMethodCallInConstructor"})
         JPanelSliderf(String title, Float min, Float max, int majorTicks, int minorTicks) {
             super();
-            int iMin = Math.round(min*INT_PRECISION);
-            int iMax = Math.round(max*INT_PRECISION);
-            int iInterval = (iMax-iMin)/majorTicks;
+            int iMin = Math.round(min * INT_PRECISION);
+            int iMax = Math.round(max * INT_PRECISION);
+            int iInterval = (iMax - iMin) / majorTicks;
 
             this.setLayout(new FlowLayout());
             this.setBorder(BorderFactory.createCompoundBorder(
-                            BorderFactory.createTitledBorder(title),
-                            BorderFactory.createEmptyBorder(5, 5, 5, 5)));
-            slider.setMinimum(Math.round(min*INT_PRECISION));
-            slider.setMaximum(Math.round(max*INT_PRECISION));
+                    BorderFactory.createTitledBorder(title),
+                    BorderFactory.createEmptyBorder(5, 5, 5, 5)));
+            slider.setMinimum(Math.round(min * INT_PRECISION));
+            slider.setMaximum(Math.round(max * INT_PRECISION));
             slider.setMajorTickSpacing(iInterval);
-            slider.setMinorTickSpacing(iInterval/minorTicks);
+            slider.setMinorTickSpacing(iInterval / minorTicks);
             @SuppressWarnings("UseOfObsoleteCollectionType")
-                    // Need to use Hashtable for JSlider labels
-            Hashtable<Integer,JLabel> labelTable = new Hashtable<Integer,JLabel>();
-            for (int i=iMin; i<=iMax; i+=iInterval) {
+            // Need to use Hashtable for JSlider labels
+            Hashtable<Integer, JLabel> labelTable = new Hashtable<>();
+            for (int i = iMin; i <= iMax; i += iInterval) {
                 float f = i;
-                f/=INT_PRECISION;
+                f /= INT_PRECISION;
                 labelTable.put(i, new JLabel(Float.toString(f)));
             }
             slider.setLabelTable(labelTable);
             slider.setPaintTicks(true);
             slider.setPaintLabels(true);
-            slider.addChangeListener(new ChangeListener() {
-                @Override
-                public void stateChanged(ChangeEvent e) {
-                    float f = slider.getValue();
-                    f/=INT_PRECISION;
-                    spinner.setValue(f);
-                }
+            slider.addChangeListener((ChangeEvent e) -> {
+                float f = slider.getValue();
+                f /= INT_PRECISION;
+                spinner.setValue(f);
             });
             spinner.setPreferredSize(new JTextField(5).getPreferredSize());
             spinner.setModel(
-                    new SpinnerNumberModel(min, min, max, new Float(FLT_PRECISION)));
+                    new SpinnerNumberModel(min, min, max, Float.valueOf(FLT_PRECISION)));
             spinner.setEditor(new JSpinner.NumberEditor(spinner, "0.00"));
-            spinner.addChangeListener(new ChangeListener() {
-                @Override
-                public void stateChanged(ChangeEvent e) {
-                    slider.setValue(
-                            Math.round((Float)spinner.getValue()*INT_PRECISION));
-                }
+            spinner.addChangeListener((ChangeEvent e) -> {
+                slider.setValue(
+                        Math.round((Float) spinner.getValue() * INT_PRECISION));
             });
             this.add(slider);
             this.add(spinner);
@@ -267,6 +260,7 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
 
         /**
          * Set the value of this object
+         *
          * @param value value to set
          */
         public void setValue(float value) {
@@ -275,12 +269,11 @@ abstract public class AbstractAudioFrame extends JmriJFrame {
 
         /**
          * Retrieve the current value of this object
+         *
          * @return current value
          */
         public float getValue() {
-            return AbstractAudio.roundDecimal((Float)spinner.getValue());
+            return AbstractAudio.roundDecimal((Float) spinner.getValue());
         }
     }
 }
-
-/* @(#)AbstractAudioFrame.java */
