@@ -1,10 +1,7 @@
-// AudioListenerFrame.java
-
 package jmri.jmrit.audio.swing;
 
 import java.awt.FlowLayout;
 import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import javax.swing.BorderFactory;
 import javax.swing.BoxLayout;
 import javax.swing.JButton;
@@ -27,33 +24,30 @@ import jmri.jmrit.beantable.AudioTableAction.AudioTableDataModel;
  * <hr>
  * This file is part of JMRI.
  * <P>
- * JMRI is free software; you can redistribute it and/or modify it under
- * the terms of version 2 of the GNU General Public License as published
- * by the Free Software Foundation. See the "COPYING" file for a copy
- * of this license.
+ * JMRI is free software; you can redistribute it and/or modify it under the
+ * terms of version 2 of the GNU General Public License as published by the Free
+ * Software Foundation. See the "COPYING" file for a copy of this license.
  * <P>
- * JMRI is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- * for more details.
+ * JMRI is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  * <P>
  *
- * @author Matthew Harris  copyright (c) 2009
- * @version $Revision$
+ * @author Matthew Harris copyright (c) 2009
  */
 public class AudioListenerFrame extends AbstractAudioFrame {
 
-    JPanelVector3f position = new JPanelVector3f(rba.getString("LabelPosition"),
-                                                 rba.getString("UnitUnits"));
-    JPanelVector3f velocity = new JPanelVector3f(rba.getString("LabelVelocity"),
-                                                 rba.getString("UnitU/S"));
-    JLabel oriAtLabel = new JLabel(rba.getString("LabelOrientationAt"));
-    JPanelVector3f oriAt = new JPanelVector3f("",rba.getString("UnitUnits"));
-    JLabel oriUpLabel = new JLabel(rba.getString("LabelOrientationUp"));
-    JPanelVector3f oriUp = new JPanelVector3f("",rba.getString("UnitUnits"));
-    JPanelSliderf gain = new JPanelSliderf(rba.getString("LabelGain"), 0.0f, 1.0f, 5, 4);
+    JPanelVector3f position = new JPanelVector3f(Bundle.getMessage("LabelPosition"),
+            Bundle.getMessage("UnitUnits"));
+    JPanelVector3f velocity = new JPanelVector3f(Bundle.getMessage("LabelVelocity"),
+            Bundle.getMessage("UnitU/S"));
+    JLabel oriAtLabel = new JLabel(Bundle.getMessage("LabelOrientationAt"));
+    JPanelVector3f oriAt = new JPanelVector3f("", Bundle.getMessage("UnitUnits"));
+    JLabel oriUpLabel = new JLabel(Bundle.getMessage("LabelOrientationUp"));
+    JPanelVector3f oriUp = new JPanelVector3f("", Bundle.getMessage("UnitUnits"));
+    JPanelSliderf gain = new JPanelSliderf(Bundle.getMessage("LabelGain"), 0.0f, 1.0f, 5, 4);
     JSpinner metersPerUnit = new JSpinner();
-    JLabel metersPerUnitLabel = new JLabel(rba.getString("UnitM/U"));
+    JLabel metersPerUnitLabel = new JLabel(Bundle.getMessage("UnitM/U"));
 
     @SuppressWarnings("OverridableMethodCallInConstructor")
     public AudioListenerFrame(String title, AudioTableDataModel model) {
@@ -62,6 +56,7 @@ public class AudioListenerFrame extends AbstractAudioFrame {
     }
 
     @Override
+    @SuppressWarnings("UnnecessaryBoxing")
     public void layoutFrame() {
         super.layoutFrame();
         JPanel p;
@@ -69,10 +64,11 @@ public class AudioListenerFrame extends AbstractAudioFrame {
         main.add(position);
         main.add(velocity);
 
-        p = new JPanel(); p.setLayout(new BoxLayout(p,BoxLayout.Y_AXIS));
+        p = new JPanel();
+        p.setLayout(new BoxLayout(p, BoxLayout.Y_AXIS));
         p.setBorder(BorderFactory.createCompoundBorder(
-                        BorderFactory.createTitledBorder(rba.getString("LabelOrientation")),
-                        BorderFactory.createEmptyBorder(5, 5, 5, 5)));
+                BorderFactory.createTitledBorder(Bundle.getMessage("LabelOrientation")),
+                BorderFactory.createEmptyBorder(5, 5, 5, 5)));
         p.add(oriAtLabel);
         p.add(oriAt);
         p.add(oriUpLabel);
@@ -81,26 +77,37 @@ public class AudioListenerFrame extends AbstractAudioFrame {
 
         main.add(gain);
 
-        p = new JPanel(); p.setLayout(new FlowLayout());
+        p = new JPanel();
+        p.setLayout(new FlowLayout());
         p.setBorder(BorderFactory.createCompoundBorder(
-                        BorderFactory.createTitledBorder(rba.getString("LabelMetersPerUnit")),
-                        BorderFactory.createEmptyBorder(5, 5, 5, 5)));
+                BorderFactory.createTitledBorder(Bundle.getMessage("LabelMetersPerUnit")),
+                BorderFactory.createEmptyBorder(5, 5, 5, 5)));
         metersPerUnit.setPreferredSize(new JTextField(8).getPreferredSize());
         metersPerUnit.setModel(
-                new SpinnerNumberModel(new Float(0f), new Float(0f), new Float(65536f), new Float(0.0001f)));
+                new SpinnerNumberModel(Float.valueOf(0f), Float.valueOf(0f), Float.valueOf(65536f), Float.valueOf(0.0001f)));
         metersPerUnit.setEditor(new JSpinner.NumberEditor(metersPerUnit, "0.0000"));
         p.add(metersPerUnit);
         p.add(metersPerUnitLabel);
         main.add(p);
 
-        JButton ok;
-        frame.getContentPane().add(ok = new JButton(rb.getString("ButtonOK")));
-        ok.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                okPressed(e);
-            }
+        p = new JPanel();
+        JButton apply;
+        p.add(apply = new JButton(Bundle.getMessage("ButtonApply")));
+        apply.addActionListener((ActionEvent e) -> {
+            applyPressed(e);
         });
+        JButton ok;
+        p.add(ok = new JButton(Bundle.getMessage("ButtonOK")));
+        ok.addActionListener((ActionEvent e) -> {
+            applyPressed(e);
+            frame.dispose();
+        });
+        JButton cancel;
+        p.add(cancel = new JButton(Bundle.getMessage("ButtonCancel")));
+        cancel.addActionListener((ActionEvent e) -> {
+            frame.dispose();
+        });
+        frame.getContentPane().add(p);
     }
 
     @Override
@@ -113,6 +120,9 @@ public class AudioListenerFrame extends AbstractAudioFrame {
      */
     @Override
     public void populateFrame(Audio a) {
+        if (a instanceof AudioListener) {
+            throw new IllegalArgumentException(a.getSystemName() + " is not an AudioListener object");
+        }
         super.populateFrame(a);
         AudioListener l = (AudioListener) a;
         position.setValue(l.getPosition());
@@ -123,9 +133,11 @@ public class AudioListenerFrame extends AbstractAudioFrame {
         metersPerUnit.setValue(l.getMetersPerUnit());
     }
 
-    void okPressed(ActionEvent e) {
+    void applyPressed(ActionEvent e) {
         String user = userName.getText();
-        if (user.equals("")) user=null;
+        if (user.equals("")) {
+            user = null;
+        }
         String sName = sysName.getText().toUpperCase();
         AudioListener l;
         try {
@@ -135,17 +147,14 @@ public class AudioListenerFrame extends AbstractAudioFrame {
             l.setVelocity(velocity.getValue());
             l.setOrientation(oriAt.getValue(), oriUp.getValue());
             l.setGain(gain.getValue());
-            l.setMetersPerUnit(AbstractAudio.roundDecimal((Float)metersPerUnit.getValue(),4d));
+            l.setMetersPerUnit(AbstractAudio.roundDecimal((Float) metersPerUnit.getValue(), 4d));
 
             // Notify changes
             model.fireTableDataChanged();
         } catch (AudioException ex) {
-            JOptionPane.showMessageDialog(null, ex.getMessage(), rb.getString("AudioCreateErrorTitle"), JOptionPane.ERROR_MESSAGE);
+            JOptionPane.showMessageDialog(null, ex.getMessage(), Bundle.getMessage("AudioCreateErrorTitle"), JOptionPane.ERROR_MESSAGE);
         }
     }
 
     //private static final Logger log = LoggerFactory.getLogger(AudioListenerFrame.class.getName());
-
 }
-
-/* @(#)AudioListenerFrame.java */
