@@ -1,39 +1,41 @@
 package jmri.jmrix.loconet;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import jmri.DccLocoAddress;
 import jmri.DccThrottle;
 import jmri.LocoAddress;
-import jmri.DccLocoAddress;
 import jmri.Throttle;
 import jmri.jmrix.AbstractThrottle;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
- * An implementation of DccThrottle via AbstractThrottle with code specific
- * to a LocoNet connection.
+ * An implementation of DccThrottle via AbstractThrottle with code specific to a
+ * LocoNet connection.
  * <P>
- * Speed in the Throttle interfaces and AbstractThrottle is a float, but in LocoNet is an int
- * with values from 0 to 127.
+ * Speed in the Throttle interfaces and AbstractThrottle is a float, but in
+ * LocoNet is an int with values from 0 to 127.
  * <P>
- * @author  Glen Oberhauser, Bob Jacobsen  Copyright (C) 2003, 2004
- * @author  Stephen Williams  Copyright (C) 2008
+ * @author Glen Oberhauser, Bob Jacobsen Copyright (C) 2003, 2004
+ * @author Stephen Williams Copyright (C) 2008
  * @version $Revision$
  */
 public class LocoNetThrottle extends AbstractThrottle implements SlotListener {
-    private LocoNetSlot slot;
-    private LocoNetInterface network;
-    private int address;
+
+    protected LocoNetSlot slot;
+    protected LocoNetInterface network;
+    protected int address;
 
     // members to record the last known spd/dirf/snd bytes AS READ FROM THE LAYOUT!!
-    private int layout_spd;
-    private int layout_dirf;
-    private int layout_snd;
-    
+    protected int layout_spd;
+    protected int layout_dirf;
+    protected int layout_snd;
+
     // slot status to be warned if slot released or dispatched
-    private int slotStatus;
+    protected int slotStatus;
 
     /**
      * Constructor
+     *
      * @param slot The LocoNetSlot this throttle will talk on.
      */
     public LocoNetThrottle(LocoNetSystemConnectionMemo memo, LocoNetSlot slot) {
@@ -49,64 +51,62 @@ public class LocoNetThrottle extends AbstractThrottle implements SlotListener {
         // save last known layout state for spd/dirf/snd so we can
         // avoid race condition if another LocoNet process queries
         // our slot while we are in the act of changing it.
-        layout_spd  = slot.speed();
+        layout_spd = slot.speed();
         layout_dirf = slot.dirf();
-        layout_snd  = slot.snd();
-
+        layout_snd = slot.snd();
 
         // cache settings
         this.speedSetting = floatSpeed(slot.speed());
-        this.f0           = slot.isF0();
-        this.f1           = slot.isF1();
-        this.f2           = slot.isF2();
-        this.f3           = slot.isF3();
-        this.f4           = slot.isF4();
-        this.f5           = slot.isF5();
-        this.f6           = slot.isF6();
-        this.f7           = slot.isF7();
-        this.f8           = slot.isF8();
+        this.f0 = slot.isF0();
+        this.f1 = slot.isF1();
+        this.f2 = slot.isF2();
+        this.f3 = slot.isF3();
+        this.f4 = slot.isF4();
+        this.f5 = slot.isF5();
+        this.f6 = slot.isF6();
+        this.f7 = slot.isF7();
+        this.f8 = slot.isF8();
 
         // extended values
-        this.f8           = slot.isF8();
-        this.f9           = slot.isF9();
-        this.f10          = slot.isF10();
-        this.f11          = slot.isF11();
-        this.f12          = slot.isF12();
-        this.f13          = slot.isF13();
-        this.f14          = slot.isF14();
-        this.f15          = slot.isF15();
-        this.f16          = slot.isF16();
-        this.f17          = slot.isF17();
-        this.f18          = slot.isF18();
-        this.f19          = slot.isF19();
-        this.f20          = slot.isF20();
-        this.f21          = slot.isF21();
-        this.f22          = slot.isF22();
-        this.f23          = slot.isF23();
-        this.f24          = slot.isF24();
-        this.f25          = slot.isF25();
-        this.f26          = slot.isF26();
-        this.f27          = slot.isF27();
-        this.f28          = slot.isF28();
+        this.f8 = slot.isF8();
+        this.f9 = slot.isF9();
+        this.f10 = slot.isF10();
+        this.f11 = slot.isF11();
+        this.f12 = slot.isF12();
+        this.f13 = slot.isF13();
+        this.f14 = slot.isF14();
+        this.f15 = slot.isF15();
+        this.f16 = slot.isF16();
+        this.f17 = slot.isF17();
+        this.f18 = slot.isF18();
+        this.f19 = slot.isF19();
+        this.f20 = slot.isF20();
+        this.f21 = slot.isF21();
+        this.f22 = slot.isF22();
+        this.f23 = slot.isF23();
+        this.f24 = slot.isF24();
+        this.f25 = slot.isF25();
+        this.f26 = slot.isF26();
+        this.f27 = slot.isF27();
+        this.f28 = slot.isF28();
 
-        this.address      = slot.locoAddr();
-        this.isForward    = slot.isForward();
-        this.slotStatus   = slot.slotStatus();
+        this.address = slot.locoAddr();
+        this.isForward = slot.isForward();
+        this.slotStatus = slot.slotStatus();
 
-        switch(slot.decoderType())
-        {
+        switch (slot.decoderType()) {
             case LnConstants.DEC_MODE_128:
-            case LnConstants.DEC_MODE_128A: 
-            	setSpeedStepMode( DccThrottle.SpeedStepMode128 ); 
-            	break;
+            case LnConstants.DEC_MODE_128A:
+                setSpeedStepMode(DccThrottle.SpeedStepMode128);
+                break;
             case LnConstants.DEC_MODE_28:
             case LnConstants.DEC_MODE_28A:
-            case LnConstants.DEC_MODE_28TRI: 
-            	setSpeedStepMode( DccThrottle.SpeedStepMode28 );
-            	break;
-            case LnConstants.DEC_MODE_14: 
-            	setSpeedStepMode( DccThrottle.SpeedStepMode14 );
-            	break;
+            case LnConstants.DEC_MODE_28TRI:
+                setSpeedStepMode(DccThrottle.SpeedStepMode28);
+                break;
+            case LnConstants.DEC_MODE_14:
+                setSpeedStepMode(DccThrottle.SpeedStepMode14);
+                break;
         }
 
         // listen for changes
@@ -118,73 +118,79 @@ public class LocoNetThrottle extends AbstractThrottle implements SlotListener {
 
     }
 
-
     /**
      * Convert a LocoNet speed integer to a float speed value
      */
     protected float floatSpeed(int lSpeed) {
-        if (lSpeed == 0) return 0.f;
-        else if (lSpeed == 1) return -1.f;   // estop
-        if(getSpeedStepMode()==DccThrottle.SpeedStepMode28){
-            if(lSpeed<=15) //Value less than 15 is in the stop/estop range bracket
-                return 0.f;
-            return (((lSpeed-12)/4f)/28.f);
-        }  else if (getSpeedStepMode()==DccThrottle.SpeedStepMode14){
-            if(lSpeed<=15) //Value less than 15 is in the stop/estop range bracket
-                return 0.f;
-            return ((lSpeed-8)/8f)/14.f;
+        if (lSpeed == 0) {
+            return 0.f;
+        } else if (lSpeed == 1) {
+            return -1.f;   // estop
         }
-        else return ( (lSpeed-1)/126.f);
+        if (getSpeedStepMode() == DccThrottle.SpeedStepMode28) {
+            if (lSpeed <= 15) //Value less than 15 is in the stop/estop range bracket
+            {
+                return 0.f;
+            }
+            return (((lSpeed - 12) / 4f) / 28.f);
+        } else if (getSpeedStepMode() == DccThrottle.SpeedStepMode14) {
+            if (lSpeed <= 15) //Value less than 15 is in the stop/estop range bracket
+            {
+                return 0.f;
+            }
+            return ((lSpeed - 8) / 8f) / 14.f;
+        } else {
+            return ((lSpeed - 1) / 126.f);
+        }
     }
 
-    /**
-     * Convert a float speed value to a LocoNet speed integer
-     */
+    @Override
     protected int intSpeed(float fSpeed) {
-      if (fSpeed == 0.f)
-        return 0;
-      else if (fSpeed < 0.f)
-        return 1;   // estop
-      if(getSpeedStepMode()==DccThrottle.SpeedStepMode28){
-        return (int)((fSpeed*28)*4)+12;
-      } else if (getSpeedStepMode()==DccThrottle.SpeedStepMode14){
-          return (int)((fSpeed*14)*8)+8;
-      }
-        // add the 0.5 to handle float to int round for positive numbers
-      return (int)(fSpeed * 126.f + 0.5) + 1 ;
+        int speed = super.intSpeed(fSpeed);
+        if (speed <= 1) {
+            return speed; // return idle and emergency stop
+        }
+        switch (this.getSpeedStepMode()) {
+            case DccThrottle.SpeedStepMode28:
+            case DccThrottle.SpeedStepMode28Mot:
+                return (int) ((fSpeed * 28) * 4) + 12;
+            case DccThrottle.SpeedStepMode14:
+                return (int) ((fSpeed * 14) * 8) + 8;
+        }
+        return speed;
     }
 
     /**
-     * Send the LocoNet message to set the state of locomotive
-     * direction and functions F0, F1, F2, F3, F4
+     * Send the LocoNet message to set the state of locomotive direction and
+     * functions F0, F1, F2, F3, F4
      */
-    protected void sendFunctionGroup1()
-    {
-        int new_dirf = ((getIsForward() ? 0 : LnConstants.DIRF_DIR) |
-                        (getF0() ? LnConstants.DIRF_F0 : 0) |
-                        (getF1() ? LnConstants.DIRF_F1 : 0) |
-                        (getF2() ? LnConstants.DIRF_F2 : 0) |
-                        (getF3() ? LnConstants.DIRF_F3 : 0) |
-                        (getF4() ? LnConstants.DIRF_F4 : 0));
+    protected void sendFunctionGroup1() {
+        int new_dirf = ((getIsForward() ? 0 : LnConstants.DIRF_DIR)
+                | (getF0() ? LnConstants.DIRF_F0 : 0)
+                | (getF1() ? LnConstants.DIRF_F1 : 0)
+                | (getF2() ? LnConstants.DIRF_F2 : 0)
+                | (getF3() ? LnConstants.DIRF_F3 : 0)
+                | (getF4() ? LnConstants.DIRF_F4 : 0));
         if (new_dirf != layout_dirf) {
+            log.debug("sendFunctionGroup1 sending {} to LocoNet slot {}", new_dirf, slot.getSlot());
             LocoNetMessage msg = new LocoNetMessage(4);
             msg.setOpCode(LnConstants.OPC_LOCO_DIRF);
             msg.setElement(1, slot.getSlot());
             msg.setElement(2, new_dirf);
             network.sendLocoNetMessage(msg);
+        } else {
+            log.debug("sendFunctionGroup1 NOT sending unchanged {} to LocoNet slot {}", new_dirf, slot.getSlot());
         }
     }
 
     /**
-     * Send the LocoNet message to set the state of
-     * functions F5, F6, F7, F8
+     * Send the LocoNet message to set the state of functions F5, F6, F7, F8
      */
-    protected void sendFunctionGroup2()
-    {
-        int new_snd = ((getF8() ? LnConstants.SND_F8 : 0) |
-                       (getF7() ? LnConstants.SND_F7 : 0) |
-                       (getF6() ? LnConstants.SND_F6 : 0) |
-                       (getF5() ? LnConstants.SND_F5 : 0));
+    protected void sendFunctionGroup2() {
+        int new_snd = ((getF8() ? LnConstants.SND_F8 : 0)
+                | (getF7() ? LnConstants.SND_F7 : 0)
+                | (getF6() ? LnConstants.SND_F6 : 0)
+                | (getF5() ? LnConstants.SND_F5 : 0));
         if (new_snd != layout_snd) {
             LocoNetMessage msg = new LocoNetMessage(4);
             msg.setOpCode(LnConstants.OPC_LOCO_SND);
@@ -195,96 +201,125 @@ public class LocoNetThrottle extends AbstractThrottle implements SlotListener {
     }
 
     protected void sendFunctionGroup3() {
-        byte[] result = jmri.NmraPacket.function9Through12Packet(address, (address>=100),
-                                         getF9(), getF10(), getF11(), getF12());
+        // LocoNet practice is to send F9-F12 as a DCC packet
+        byte[] result = jmri.NmraPacket.function9Through12Packet(address, (address >= 100),
+                getF9(), getF10(), getF11(), getF12());
 
-        ((jmri.CommandStation)adapterMemo.get(jmri.CommandStation.class)).sendPacket(result, 4); // repeat = 4
+        ((jmri.CommandStation) adapterMemo.get(jmri.CommandStation.class)).sendPacket(result, 4); // repeat = 4
+    }
+
+    @Override
+    protected void sendFunctionGroup4() {
+        // LocoNet practice is to send F13-F20 as a DCC packet
+        byte[] result = jmri.NmraPacket.function13Through20Packet(address, (address >= 100),
+                getF13(), getF14(), getF15(), getF16(),
+                getF17(), getF18(), getF19(), getF20());
+
+        ((jmri.CommandStation) adapterMemo.get(jmri.CommandStation.class)).sendPacket(result, 4); // repeat = 4
+    }
+
+    @Override
+    protected void sendFunctionGroup5() {
+        // LocoNet practice is to send F21-F28 as a DCC packet
+        byte[] result = jmri.NmraPacket.function21Through28Packet(address, (address >= 100),
+                getF21(), getF22(), getF23(), getF24(),
+                getF25(), getF26(), getF27(), getF28());
+
+        ((jmri.CommandStation) adapterMemo.get(jmri.CommandStation.class)).sendPacket(result, 4); // repeat = 4
     }
 
     /**
      * Set the speed.
      * <P>
      * This intentionally skips the emergency stop value of 1.
+     *
      * @param speed Number from 0 to 1; less than zero is emergency stop
      */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value="FE_FLOATING_POINT_EQUALITY") // OK to compare floating point, notify on any change
-    public void setSpeedSetting(float speed)
-    {
-        if( LnConstants.CONSIST_MID==slot.consistStatus()||
-           LnConstants.CONSIST_SUB==slot.consistStatus() )
-        {
-           // Digitrax slots use the same memory location to store the
-           // speed AND the slot to which a locomotive is consisted.
-           // if the locomotive is either a CONSIST_MID or a CONSIST_SUB,
-           // we need to ignore the request to change the speed
-           if(log.isDebugEnabled()) log.debug("Attempt to change speed on locomoitve " + getLocoAddress() + " which is a " + LnConstants.CONSIST_STAT(slot.consistStatus())); 
-           return;
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point, notify on any change
+    public void setSpeedSetting(float speed) {
+        if (LnConstants.CONSIST_MID == slot.consistStatus()
+                || LnConstants.CONSIST_SUB == slot.consistStatus()) {
+            // Digitrax slots use the same memory location to store the
+            // speed AND the slot to which a locomotive is consisted.
+            // if the locomotive is either a CONSIST_MID or a CONSIST_SUB,
+            // we need to ignore the request to change the speed
+            log.debug("Attempt to change speed on locomotive {} which is a {}", getLocoAddress(), LnConstants.CONSIST_STAT(slot.consistStatus()));
+            return;
         }
-    	float oldSpeed = this.speedSetting;
+        float oldSpeed = this.speedSetting;
         this.speedSetting = speed;
-        if (speed<0) this.speedSetting = -1.f;
+        if (speed < 0) {
+            this.speedSetting = -1.f;
+        }
 
-        int new_spd = intSpeed( speed );
+        int new_spd = intSpeed(speed);
         if (new_spd != layout_spd) {
             LocoNetMessage msg = new LocoNetMessage(4);
             msg.setOpCode(LnConstants.OPC_LOCO_SPD);
             msg.setElement(1, slot.getSlot());
-            log.debug( "setSpeedSetting: float speed: " + speed + " LocoNet speed: " + new_spd );
+            log.debug("setSpeedSetting: float speed: " + speed + " LocoNet speed: " + new_spd);
             msg.setElement(2, new_spd);
             network.sendLocoNetMessage(msg);
         }
-        
+
         // reset timeout
         if (mRefreshTimer != null) { // got NullPointerException sometimes
-        	mRefreshTimer.stop();
-        	mRefreshTimer.setRepeats(true);     // refresh until stopped by dispose
-        	mRefreshTimer.start();
+            mRefreshTimer.stop();
+            mRefreshTimer.setRepeats(true);     // refresh until stopped by dispose
+            mRefreshTimer.start();
         }
-        if (oldSpeed != this.speedSetting)
-        	notifyPropertyChangeListener("SpeedSetting", oldSpeed, this.speedSetting );
+        if (oldSpeed != this.speedSetting) {
+            notifyPropertyChangeListener("SpeedSetting", oldSpeed, this.speedSetting);
+        }
         record(speed);
     }
 
     /**
-     * LocoNet actually puts forward and backward in the same message
-     * as the first function group.
+     * LocoNet actually puts forward and backward in the same message as the
+     * first function group.
      */
-    public void setIsForward(boolean forward)
-    {
-    	boolean old = isForward;
+    public void setIsForward(boolean forward) {
+        boolean old = isForward;
         isForward = forward;
+        log.debug("setIsForward to {}, old value {}", isForward, old);
         sendFunctionGroup1();
-        if (old != this.isForward)
-        	notifyPropertyChangeListener("IsForward", old, this.isForward);
+        if (old != this.isForward) {
+            notifyPropertyChangeListener("IsForward", old, this.isForward);
+        }
     }
 
-    public LocoNetSlot getLocoNetSlot(){
+    public LocoNetSlot getLocoNetSlot() {
         return slot;
     }
 
     public String toString() {
         return getLocoAddress().toString();
     }
-    
+
     /**
-     * Dispose when finished with this object.  After this, further usage of
-     * this Throttle object will result in a JmriException.
+     * Dispose when finished with this object. After this, further usage of this
+     * Throttle object will result in a JmriException.
      */
     protected void throttleDispose() {
+        
+        log.debug("disposing of throttle (and setting slot = null)");
+        
         // stop timeout
-        if (mRefreshTimer != null)
-        	mRefreshTimer.stop();
+        if (mRefreshTimer != null) {
+            mRefreshTimer.stop();
+        }
 
         // release connections
-        if (slot != null)
-        	slot.removeSlotListener(this);
+        if (slot != null) {
+            slot.removeSlotListener(this);
+        }
 
         mRefreshTimer = null;
         slot = null;
         network = null;
-        
+
         finishRecord();
-     }
+    }
 
     javax.swing.Timer mRefreshTimer = null;
 
@@ -302,32 +337,34 @@ public class LocoNetThrottle extends AbstractThrottle implements SlotListener {
      * Internal routine to resend the speed on a timeout
      */
     synchronized protected void timeout() {
-    	// clear the last known layout_spd so that we will actually send the
-    	// message.
-    	layout_spd = -1;
-    	setSpeedSetting(speedSetting);
+        // clear the last known layout_spd so that we will actually send the
+        // message.
+        layout_spd = -1;
+        setSpeedSetting(speedSetting);
     }
 
     /**
      * Get notified when underlying slot information changes
-     */    
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value="FE_FLOATING_POINT_EQUALITY") // OK to compare floating point, notify on any change
+     */
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point, notify on any change
     public void notifyChangedSlot(LocoNetSlot pSlot) {
-        if (slot!=pSlot) log.error("notified of change in different slot");
+        if (slot != pSlot) {
+            log.error("notified of change in different slot");
+        }
 
         // Save current layout state of spd/dirf/snd so we won't run amok
         // toggling values if another LocoNet entity accesses the slot while
         // our most recent change request is still in-flight.
-        layout_spd  = slot.speed();
+        layout_spd = slot.speed();
         layout_dirf = slot.dirf();
-        layout_snd  = slot.snd();
-        
+        layout_snd = slot.snd();
+
         // handle change in each state
         if (this.speedSetting != floatSpeed(slot.speed())) {
-          Float newSpeed = new Float( floatSpeed(slot.speed() ) ) ;
-          log.debug( "notifyChangedSlot: old speed: " + this.speedSetting + " new Speed: " + newSpeed );
-          notifyPropertyChangeListener("SpeedSetting", new Float(this.speedSetting), newSpeed );
-          this.speedSetting = newSpeed.floatValue() ;
+            Float newSpeed = Float.valueOf(floatSpeed(slot.speed()));
+            log.debug("notifyChangedSlot: old speed: " + this.speedSetting + " new Speed: " + newSpeed);
+            notifyPropertyChangeListener("SpeedSetting", Float.valueOf(this.speedSetting), newSpeed);
+            this.speedSetting = newSpeed.floatValue();
         }
 
         boolean temp;
@@ -336,18 +373,26 @@ public class LocoNetThrottle extends AbstractThrottle implements SlotListener {
             this.isForward = slot.isForward();
             notifyPropertyChangeListener("IsForward", Boolean.valueOf(temp), Boolean.valueOf(slot.isForward()));
         }
-        
+
         // Slot status        
         if (slotStatus != slot.slotStatus()) {
-        	int newStat = slot.slotStatus();
-        	if (log.isDebugEnabled())
-        		log.debug("Slot status changed from "+LnConstants.LOCO_STAT(slotStatus)+" to "+LnConstants.LOCO_STAT(newStat) );
-        	// PropertyChangeListeners notification: ThrottleConnected from True to False when disconnected
-        	notifyPropertyChangeListener("ThrottleConnected", (slotStatus & LnConstants.LOCOSTAT_MASK) == LnConstants.LOCO_IN_USE,
-        														! ( (slotStatus & LnConstants.LOCOSTAT_MASK) == LnConstants.LOCO_IN_USE) );
-        	slotStatus = newStat;
+            int newStat = slot.slotStatus();
+            if (log.isDebugEnabled()) {
+                log.debug("Slot status changed from " + LnConstants.LOCO_STAT(slotStatus) + " to " + LnConstants.LOCO_STAT(newStat));
+            }
+            // PropertyChangeListeners notification: ThrottleConnected from True to False when disconnected
+            notifyPropertyChangeListener("ThrottleConnected", (slotStatus & LnConstants.LOCOSTAT_MASK) == LnConstants.LOCO_IN_USE,
+                    !((slotStatus & LnConstants.LOCOSTAT_MASK) == LnConstants.LOCO_IN_USE));
+            slotStatus = newStat;
         }
-
+        
+        // It is possible that the slot status change we are being notified of
+        // is the slot being set to status COMMON. In which case the slot just
+        // got set to null. No point in continuing. In fact to do so causes a NPE.
+        if (slot == null) {
+            return;
+        }
+        
         // Functions
         if (this.f0 != slot.isF0()) {
             temp = this.f0;
@@ -496,7 +541,7 @@ public class LocoNetThrottle extends AbstractThrottle implements SlotListener {
             this.f28 = slot.isF28();
             notifyPropertyChangeListener(Throttle.F28, Boolean.valueOf(temp), Boolean.valueOf(slot.isF28()));
         }
-        
+
     }
 
     /*
@@ -510,61 +555,60 @@ public class LocoNetThrottle extends AbstractThrottle implements SlotListener {
      */
     @Override
     public void setSpeedStepMode(int Mode) {
-        int status=slot.slotStatus();
-        if(log.isDebugEnabled()) {
-             log.debug("Speed Step Mode Change to Mode: " + Mode +
-                " Current mode is: " + this.speedStepMode);
-                log.debug("Current Slot Mode: " +LnConstants.DEC_MODE(status));
+        int status = slot.slotStatus();
+        if (log.isDebugEnabled()) {
+            log.debug("Speed Step Mode Change to Mode: " + Mode
+                    + " Current mode is: " + this.speedStepMode);
+            log.debug("Current Slot Mode: " + LnConstants.DEC_MODE(status));
         }
-        if(speedStepMode!=Mode)
-                notifyPropertyChangeListener("SpeedSteps", this.speedStepMode,
-                                              this.speedStepMode=Mode );
-        if(Mode==DccThrottle.SpeedStepMode14) {
-                speedIncrement=SPEED_STEP_14_INCREMENT;
-                log.debug("14 speed step change");
-                status=status&((~LnConstants.DEC_MODE_MASK)|
-                                LnConstants.STAT1_SL_SPDEX)
-                             | LnConstants.DEC_MODE_14;
+        if (speedStepMode != Mode) {
+            notifyPropertyChangeListener("SpeedSteps", this.speedStepMode,
+                    this.speedStepMode = Mode);
         }
-        else if(Mode==DccThrottle.SpeedStepMode28Mot) {
-                speedIncrement=SPEED_STEP_28_INCREMENT;
-                log.debug("28-Tristate speed step change");
-                status=status&((~LnConstants.DEC_MODE_MASK)|
-                                LnConstants.STAT1_SL_SPDEX)
-                             | LnConstants.DEC_MODE_28TRI;
-             }
-        else if(Mode==DccThrottle.SpeedStepMode28) {
-                speedIncrement=SPEED_STEP_28_INCREMENT;
-                log.debug("28 speed step change");
-                status=status&((~LnConstants.DEC_MODE_MASK)|
-                                LnConstants.STAT1_SL_SPDEX);
-                             // | LnConstants.DEC_MODE_28;      // DEC_MODE_28 has a zero value, here for documentation
-                                                                // it unfortunately shows a INT_VACUOUS_BIT_OPERATION in Findbugs
-                                                                // and I don't want to annote that around this entire long method
-             }
-        else { // default to 128 speed step mode
-                speedIncrement=SPEED_STEP_128_INCREMENT;
-                log.debug("128 speed step change");
-                status=status&((~LnConstants.DEC_MODE_MASK)|
-                                LnConstants.STAT1_SL_SPDEX)
-                             | LnConstants.DEC_MODE_128;
-             }
-        if(log.isDebugEnabled()) 
-              log.debug("New Slot Mode: " +LnConstants.DEC_MODE(status));
-        if(mRefreshTimer!=null) // the refresh timer isn't created until
-                                // after initilization.  We only want to
-                                // modify the slot after the initilization 
-                                // is complete.
-           network.sendLocoNetMessage(slot.writeMode(status));
+        if (Mode == DccThrottle.SpeedStepMode14) {
+            speedIncrement = SPEED_STEP_14_INCREMENT;
+            log.debug("14 speed step change");
+            status = status & ((~LnConstants.DEC_MODE_MASK)
+                    | LnConstants.STAT1_SL_SPDEX)
+                    | LnConstants.DEC_MODE_14;
+        } else if (Mode == DccThrottle.SpeedStepMode28Mot) {
+            speedIncrement = SPEED_STEP_28_INCREMENT;
+            log.debug("28-Tristate speed step change");
+            status = status & ((~LnConstants.DEC_MODE_MASK)
+                    | LnConstants.STAT1_SL_SPDEX)
+                    | LnConstants.DEC_MODE_28TRI;
+        } else if (Mode == DccThrottle.SpeedStepMode28) {
+            speedIncrement = SPEED_STEP_28_INCREMENT;
+            log.debug("28 speed step change");
+            status = status & ((~LnConstants.DEC_MODE_MASK)
+                    | LnConstants.STAT1_SL_SPDEX);
+            // | LnConstants.DEC_MODE_28;      // DEC_MODE_28 has a zero value, here for documentation
+            // it unfortunately shows a INT_VACUOUS_BIT_OPERATION in Findbugs
+            // and I don't want to annote that around this entire long method
+        } else { // default to 128 speed step mode
+            speedIncrement = SPEED_STEP_128_INCREMENT;
+            log.debug("128 speed step change");
+            status = status & ((~LnConstants.DEC_MODE_MASK)
+                    | LnConstants.STAT1_SL_SPDEX)
+                    | LnConstants.DEC_MODE_128;
+        }
+        if (log.isDebugEnabled()) {
+            log.debug("New Slot Mode: " + LnConstants.DEC_MODE(status));
+        }
+        if (mRefreshTimer != null) // the refresh timer isn't created until
+        // after initilization.  We only want to
+        // modify the slot after the initilization 
+        // is complete.
+        {
+            network.sendLocoNetMessage(slot.writeMode(status));
+        }
     }
-
-
 
     public LocoAddress getLocoAddress() {
         return new DccLocoAddress(address, LnThrottleManager.isLongAddress(address));
     }
 
     // initialize logging
-    static Logger log = LoggerFactory.getLogger(LocoNetThrottle.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(LocoNetThrottle.class.getName());
 
 }
